// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalRepositoriesTable renders correctly 1`] = `
<div>
  <div
    class="pf-c-pagination pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Pagination-top-1"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        2
      </b>
       
      of
       
      <b>
        2
      </b>
       
      
    </div>
    <div
      class="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            2
          </b>
           
          of
           
          <b>
            2
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-top-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <table
    aria-label="ActivationKeys"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-1"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-m-width-40"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Label
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-a
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-b
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-options-menu pf-m-top"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            2
          </b>
           
          of
           
          <b>
            2
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled="true"
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          class="pf-c-form-control"
          disabled=""
          max="1"
          min="1"
          type="number"
          value="1"
        />
        <span
          aria-hidden="true"
        >
          of
           
          1
        </span>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled="true"
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`when row column headings are clicked can sort by label 1`] = `
<div>
  <div
    class="pf-c-pagination pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Pagination-top-3"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        3
      </b>
       
      of
       
      <b>
        3
      </b>
       
      
    </div>
    <div
      class="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            3
          </b>
           
          of
           
          <b>
            3
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-5"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-top-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-13"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-14"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <table
    aria-label="ActivationKeys"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-2"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-m-width-40"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort="ascending"
          class="pf-c-table__sort pf-m-selected"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Label
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-5"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-a
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-6"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-b
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-7"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-c
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-3"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-options-menu pf-m-top"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            3
          </b>
           
          of
           
          <b>
            3
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-6"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled="true"
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-15"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-16"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          class="pf-c-form-control"
          disabled=""
          max="1"
          min="1"
          type="number"
          value="1"
        />
        <span
          aria-hidden="true"
        >
          of
           
          1
        </span>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-17"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled="true"
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-18"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`when row column headings are clicked can sort by label, reversed 1`] = `
<div>
  <div
    class="pf-c-pagination pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Pagination-top-6"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        3
      </b>
       
      of
       
      <b>
        3
      </b>
       
      
    </div>
    <div
      class="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            3
          </b>
           
          of
           
          <b>
            3
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-11"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-top-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-31"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-32"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <table
    aria-label="ActivationKeys"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-3"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-8"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-m-width-40"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort="descending"
          class="pf-c-table__sort pf-m-selected"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Label
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-9"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-c
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-10"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-b
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-11"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-a
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-6"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-options-menu pf-m-top"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            3
          </b>
           
          of
           
          <b>
            3
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-12"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled="true"
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-33"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-34"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          class="pf-c-form-control"
          disabled=""
          max="1"
          min="1"
          type="number"
          value="1"
        />
        <span
          aria-hidden="true"
        >
          of
           
          1
        </span>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-35"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled="true"
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-36"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`when using pagination can change page 1`] = `
<div>
  <div
    class="pf-c-pagination pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Pagination-top-8"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-pagination__total-items"
    >
      <b>
        11
         - 
        12
      </b>
       
      of
       
      <b>
        12
      </b>
       
      
    </div>
    <div
      class="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            11
             - 
            12
          </b>
           
          of
           
          <b>
            12
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-15"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-top-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="false"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-43"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-44"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <table
    aria-label="ActivationKeys"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-4"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-12"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-m-width-40"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Label
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-13"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-10
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-14"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-11
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-8"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-options-menu pf-m-top"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            11
             - 
            12
          </b>
           
          of
           
          <b>
            12
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-16"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled="false"
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-45"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="false"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-46"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          class="pf-c-form-control"
          max="2"
          min="1"
          type="number"
          value="2"
        />
        <span
          aria-hidden="true"
        >
          of
           
          2
        </span>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-47"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled="true"
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-48"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`when using pagination can change per page 1`] = `
<div>
  <div
    class="pf-c-pagination pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Pagination-top-10"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-pagination__total-items"
    >
      <b>
        1
         - 
        12
      </b>
       
      of
       
      <b>
        12
      </b>
       
      
    </div>
    <div
      class="pf-c-options-menu"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            12
          </b>
           
          of
           
          <b>
            12
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-19"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-top-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-55"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-56"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
  <table
    aria-label="ActivationKeys"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-5"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-23"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-m-width-40"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Label
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-24"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-0
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-25"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-1
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-26"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-2
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-27"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-3
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-28"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-4
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-29"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-5
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-30"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-6
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-31"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-7
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-32"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-8
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-33"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-9
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-34"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-10
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-35"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        />
        <td
          class=""
          data-label="Label"
        >
          label-11
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-10"
    data-ouia-component-type="PF4/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-c-options-menu pf-m-top"
      data-ouia-component-type="PF4/PaginationOptionsMenu"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
      >
        <span
          class="pf-c-options-menu__toggle-text"
        >
          <b>
            1
             - 
            12
          </b>
           
          of
           
          <b>
            12
          </b>
           
          
        </span>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Items per page"
          class="  pf-c-options-menu__toggle-button"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-20"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-c-options-menu__toggle-button-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-c-pagination__nav"
    >
      <div
        class="pf-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-disabled="true"
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-57"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-58"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-page-select"
      >
        <input
          aria-label="Current page"
          class="pf-c-form-control"
          disabled=""
          max="1"
          min="1"
          type="number"
          value="1"
        />
        <span
          aria-hidden="true"
        >
          of
           
          1
        </span>
      </div>
      <div
        class="pf-c-pagination__nav-control"
      >
        <button
          aria-disabled="true"
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-59"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-disabled="true"
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain pf-m-disabled"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-60"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            />
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;
